--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/lodash": "^4.14.186",
+    "@types/node": "^18.11.7",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "eslint": "^8.26.0",
